removed route fields from env template

--- a/api/crds/kubefox.xigxog.io_clustervirtualenvs.yaml
+++ b/api/crds/kubefox.xigxog.io_clustervirtualenvs.yaml
@@ -27,7 +27,7 @@ spec:
             properties:
               secrets:
                 additionalProperties:
-                  type: object
+                  type: string
                 type: object
               vars:
                 type: object
