--- a/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
@@ -32,7 +32,7 @@ spec:
             properties:
               secrets:
                 additionalProperties:
-                  type: object
+                  type: string
                 type: object
               vars:
                 type: object
