--- a/api/crds/kubefox.xigxog.io_platforms.yaml
+++ b/api/crds/kubefox.xigxog.io_platforms.yaml
@@ -5163,6 +5163,8 @@ spec:
                       type: string
                     ready:
                       type: boolean
+                    type:
+                      type: string
                   required:
                   - name
                   - nodeIP
