added app to component and platform to event context

--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -38,6 +38,8 @@ spec:
           {{- include "resources" . | nindent 10 }}
           {{- include "probes" . | nindent 10 }}
           args:
+            - -platform={{ .Platform.Name }}
+            - -app={{ .Component.App }}
             - -name={{ .Component.Name }}
             - -commit={{ .Component.Commit }}
             - -broker-addr=$(KUBEFOX_HOST_IP):6060
