--- a/api/crds/kubefox.xigxog.io_httpadapters.yaml
+++ b/api/crds/kubefox.xigxog.io_httpadapters.yaml
@@ -22,7 +22,16 @@ spec:
     singular: httpadapter
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .details.title
+      name: Title
+      priority: 1
+      type: string
+    - jsonPath: .details.description
+      name: Description
+      priority: 1
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -75,3 +84,4 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
