--- a/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvsnapshots.yaml
@@ -22,7 +22,25 @@ spec:
     singular: virtualenvsnapshot
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.source.name
+      name: Source
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Created
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    - jsonPath: .details.title
+      name: Title
+      priority: 1
+      type: string
+    - jsonPath: .details.description
+      name: Description
+      priority: 1
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -112,3 +130,4 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
